<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                xmlns:fresco="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/gray_ed"
                android:fitsSystemWindows="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:background="@color/gray_42">

        <include
            layout="@layout/layout_header_white"/>
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="44dp"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/gray_42"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.facebook.drawee.view.SimpleDraweeView
                        android:id="@+id/iv_member_card"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        fresco:actualImageScaleType="centerCrop"
                        fresco:placeholderImage="@mipmap/img_vipcard1"
                        fresco:placeholderImageScaleType="centerCrop"
                        fresco:roundedCornerRadius="8dp"
                        fresco:viewAspectRatio="1.7268"/>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:gravity="center_vertical"
                        android:paddingBottom="15dp"
                        android:paddingLeft="40dp">

                        <ImageView
                            android:id="@+id/iv_member_card_code"
                            android:layout_width="16dp"
                            android:layout_height="16dp"
                            android:scaleType="fitCenter"
                            android:src="@mipmap/ic_card_qrcod"/>

                        <TextView
                            android:id="@+id/tv_member_card_no"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="5dp"
                            android:textColor="@color/gray_10"
                            android:textSize="12sp"/>

                    </LinearLayout>
                </RelativeLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="14dp"
                    android:layout_marginTop="11dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:id="@+id/ll_member_card_money"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center_horizontal"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/user_remain_money"
                            android:textColor="@color/gray_95"
                            android:textSize="14sp"/>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="3dp"
                            android:gravity="bottom"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/tv_member_card_money"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textColor="@android:color/white"
                                android:textSize="20sp"/>

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/money"
                                android:textColor="@android:color/white"
                                android:textSize="12sp"/>

                        </LinearLayout>

                    </LinearLayout>


                    <LinearLayout
                        android:id="@+id/ll_member_card_score"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center_horizontal"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/user_score"
                            android:textColor="@color/gray_95"
                            android:textSize="14sp"/>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="3dp"
                            android:gravity="bottom"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/tv_member_card_score"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textColor="@android:color/white"
                                android:textSize="20sp"/>

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/score"
                                android:textColor="@android:color/white"
                                android:textSize="12sp"/>

                        </LinearLayout>

                    </LinearLayout>


                    <LinearLayout
                        android:id="@+id/ll_member_card_grade"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center_horizontal"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/user_grade"
                            android:textColor="@color/gray_95"
                            android:textSize="14sp"/>

                        <TextView
                            android:id="@+id/tv_member_card_grade"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="3dp"
                            android:textColor="@android:color/white"
                            android:textSize="18sp"/>

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_member_card_rights"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="11dp"
                android:layout_marginTop="25dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <View
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="会员特权"
                    android:textColor="@color/gray_10"
                    android:textSize="22sp"
                    android:textStyle="bold"/>

                <ImageView
                    android:layout_width="16dp"
                    android:layout_height="16dp"
                    android:layout_marginLeft="5dp"
                    android:scaleType="fitCenter"
                    android:src="@mipmap/ic_home_more"/>

                <View
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"/>
            </LinearLayout>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                app:cardBackgroundColor="@android:color/white"
                app:cardCornerRadius="8dp"
                app:cardElevation="1dp">

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/rv_member_rights"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                </android.support.v7.widget.RecyclerView>

            </android.support.v7.widget.CardView>

            <RelativeLayout
                android:id="@+id/rl_member_recode"
                android:layout_width="match_parent"
                android:layout_height="49dp"
                android:layout_marginTop="10dp"
                android:background="@android:color/white"
                android:visibility="gone">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="12dp"
                    android:drawableLeft="@mipmap/ic_vip_cashdetaile"
                    android:drawablePadding="5dp"
                    android:text="我的消费记录"
                    android:textColor="@color/gray_10"/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="12dp"
                    android:scaleType="center"
                    android:src="@mipmap/btn_user_next"/>

            </RelativeLayout>


        </LinearLayout>
    </ScrollView>


</RelativeLayout>